viewport bug instead was a overflow-y bug, fixed

--- a/css/style.css
+++ b/css/style.css
@@ -50,13 +50,16 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
 }
 
-
-
 h1 {
     font-size:36px;
     letter-spacing:1px;
     text-transform:uppercase;
     margin-bottom: 15px;
+}
+
+iframe{
+    width: 100%;
+    height: 100%;
 }
 
 .container-fluid{
@@ -132,6 +135,7 @@ ul li {
     background: -moz-linear-gradient(white, white,, #FADAE2); /* For Firefox 3.6 to 15 */
     background: linear-gradient(white, white, #FADAE2); /* Standard syntax (must be last) */
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 
@@ -679,7 +683,7 @@ nav a:focus {
     border-width: 12px;
     border-color: #f47721;
     top: 35%;
-    width: 200%;
+    width: 600px;
     -webkit-transition: -webkit-transform 1.3s;
     -moz-transition: -moz-transform 1.3s;
     transition: transform 1.3s;
@@ -911,10 +915,6 @@ section.portfolio {
     display: block;
 }
 
-#filters ul li a img {
-
-}
-
 #filters ul li a:hover {
     text-decoration: none;
 }
@@ -948,7 +948,7 @@ section.portfolio {
 
     #portfolio-wrap .row{
       margin:0;
-      padding: 50px 0 50px 50px;
+      padding: 50px 0 50px 10px;
       width: 100%;
     }
 
@@ -1471,8 +1471,8 @@ a.scrollup:hover i,a.scrollup:focus i {
 }
 
 @media (max-width: 767px) {
-/*---------GENERAL------------------*/
 
+/*---------GENERAL------------------*/
     .video-section .welcome {
         font-size: 28px;
         padding-top: 0;
